2007-06-20  Katsutoshi Itoh <cut-sea@kahua.org>

	* change: viewable? method for unit and fan.
	
2007-04-15 SHIBATA Tomohisa <shibata@kahua.org>

	* add non-display status to unit.
	* remove limit filter for issue list page.

2007-04-15 SHIBATA Tomohisa <shibata@kahua.org>

	* add fleshness meter to issue list page.
	* modify: issue delete button moved from issue list page to issue edit page.

2007-02-15  Katsutoshi Itoh <cut-sea@kahua.org>

	* remove unneccessary keyword :pick from test-common code.
	
2006-12-28  Katsutoshi Itoh <cut-sea@kahua.org>

	* modify: catch up with Kahua-1.0 site bundle.
	* tag: 0.1.4
	
2006-12-14  Katsutoshi Itoh <cut-sea@kahua.org>

	* improve performance of recent melodies page.
	  so, add new slot name as 'recent' into <unit> class.
	* Fix: Error occered after save at group edit page.
	* remove "   " and "guest" user from initdb.scm.
	* unify terminology.
	
2006-12-14  Tatsuya BIZENN  <bizenn@arthub.net>

	* Use when/ unless/ instead of when unless for conditional
	  element.  So drop x->string definition for <undefined-object>.

2006-12-13  Tatsuya BIZENN  <bizenn@arthub.net>

	* Define x->string method for <undefind-object> because
	  Kahua drop obj->string and use x->string instead of it.

2006-12-13    <cut-sea@kahua.org>

	* modify test code to ensure flexibility
	  because of master table and unit table is not sorted.
	
2006-11-11    <cut-sea@kahua.org>

	* Warnning!: Now fail some tests.
	* replace test.conf to test.conf.in
	* replace database with efs, which aim to walk with Kahua CVS HEAD.
	* test repair for Kahua CVS HEAD.
	* install directory repair.
	* delete make-directory* at database-name.

2006-11-11  Shiro Kawai  <shiro@acm.org>

	* kagoiri-musume/page.kahua, test/common-test.scm: Changed HTTP
	  response from "302 Moved" to "302 Found", following the change
	  in Kahua.

2006-11-11    <cut-sea@kahua.org>

	* add coding rule comment for *.kahua/*.scm
	
2006-08-30    <yasuyuki@javaopen.org>
